--- a/index.html
+++ b/index.html
@@ -103,15 +103,32 @@
           <li><a href="" class="bold">Shop</a></li>
         </ul>
       </aside>
-      <span class="fas fa-shopping-cart nav-icons"></span>
+      <a href=""><span class="fas fa-shopping-cart nav-icons"></span></a>
     </nav>
 
   </header>
 
   <section>
-    <div class="main-bg"></div>
+    <div class="main-bg">
+
+      <div class="empty-div"></div>
+
+      <h1 class="capitalise">Start 2022 with more creativity</h1>
+
+      <div class="main-message">
+        <div class="switch"></div>
+        <p class="capitalise">Get 15% off sitewide for a limited time</p>
+        <p class="capitalise dotted-border">Code: holidays</p>
+      </div>
+
+      <a href=""><span class="fas fa-chevron-down main-bg-icons"></span></a>
+
+    </div>
   </section>
 
+  <section class="hero1"></section>
+
+  <script src="test.js"></script>
 </body>
 
 </html>
