finished with hero3 and footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,75 @@
 
   <section class="hero1"></section>
 
-  <script src="test.js"></script>
+  <section class="hero2">
+    <div class="hero2-slogan">
+      <h1 class="capitalise">Create your own console</h1>
+      <p>Add-on to make it perfect.</p>
+    </div>
+  </section>
+
+  <section class="hero3"></section>
+
+  <footer>
+    <section class="newsletter">
+      <h5 class="capitalise">Subscribe to Monogram</h5>
+      <p>Master productivity with Creative Console and get all the latest Monogram news.</p>
+      <form>
+        <input type="email" placeholder="Email Address">
+        <input type="button" value="Submit">
+      </form>
+      <div class="social-links">
+        <a href=""><span class="fab fa-instagram"></span></a>
+        <a href=""><span class="fab fa-twitter"></span></a>
+        <a href=""><span class="fab fa-facebook"></span></a>
+        <a href=""><span class="fab fa-youtube"></span></a>
+      </div>
+    </section>
+
+    <section class="monogram">
+      <h5 class="capitalise">monogram</h5>
+      <p>305 King St. W. <br>
+        Suite 502 <br>
+        Kitchener, ON <br>
+        Canada</p>
+    </section>
+
+    <section class="quick-links">
+      <h5 class="capitalise">Quick Links</h5>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">How it Works</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Download</a></li>
+      </ul>
+    </section>
+    <section class="help">
+      <h5 class="capitalise">Help</h5>
+      <ul>
+        <li><a href="">FAQs</a></li>
+        <li><a href="">Support Center</a></li>
+        <li><a href="">Shipping and Sales</a></li>
+        <li><a href="">Palette Support</a></li>
+      </ul>
+    </section>
+    <section class="information">
+      <h5 class="capitalise">Information</h5>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Work with us</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Use</a></li>
+        <li><a href="">Terms of Sale</a></li>
+        <li><a href="">Press Kit</a></li>
+      </ul>
+    </section>
+    <section class="copyright">
+      <p>© Monogram 2021</p>
+      <small>Protected by reCAPTCHA - <a href="">Privacy</a> - <a href="">Terms</a></small>
+    </section>
+  </footer>
+
+  <script src=".\test.js"></script>
 </body>
 
 </html>
