--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <ul class="nav-side">
           <li><a href="">How it works</a></li>
           <li><a href="">Workflows</a></li>
-          <ul>
+          <ul class="extra">
             <li><a href="">Photo Editing</a></li>
             <li><a href="">Video & Filmmaking</a></li>
             <li><a href="">Music & Audio</a></li>
@@ -108,7 +108,7 @@
 
   </header>
 
-  <section>
+  <section class="hero-main">
     <div class="main-bg">
 
       <div class="empty-div"></div>
@@ -118,7 +118,7 @@
       <div class="main-message">
         <div class="switch"></div>
         <p class="capitalise">Get 15% off sitewide for a limited time</p>
-        <p class="capitalise dotted-border">Code: holidays</p>
+        <p class="capitalise dashed-border">Code: holidays</p>
       </div>
 
       <a href=""><span class="fas fa-chevron-down main-bg-icons"></span></a>
@@ -150,6 +150,10 @@
         <a href=""><span class="fab fa-twitter"></span></a>
         <a href=""><span class="fab fa-facebook"></span></a>
         <a href=""><span class="fab fa-youtube"></span></a>
+      </div>
+      <div class="copyright">
+        <p>© Monogram 2021</p>
+        <small>Protected by reCAPTCHA - <a href="">Privacy</a> - <a href="">Terms</a></small>
       </div>
     </section>
 
@@ -189,10 +193,6 @@
         <li><a href="">Terms of Sale</a></li>
         <li><a href="">Press Kit</a></li>
       </ul>
-    </section>
-    <section class="copyright">
-      <p>© Monogram 2021</p>
-      <small>Protected by reCAPTCHA - <a href="">Privacy</a> - <a href="">Terms</a></small>
     </section>
   </footer>
 
