--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monogram Model</title>
   <link rel="stylesheet" href=".\test.css">
-  <script src="https://kit.fontawesome.com/f0668889bf.js" crossorigin="anonymous"></script>
+  <!-- Insert script tag of Font Awesome Kit (sign up a free account with Font Awesome) -->
 </head>
 
 <body>
